# kitsune-lang

./: Cargo.toml  README.md  ast.json  build.rs  main.kitsune  res.json
src/: lib.rs  main.rs
src/analyze/: kitsune_analyzer.rs  mod.rs
src/ast/: ast.rs
src/grammar/: kitsune.lalrpop  kitsune.pest  kitsune.rs  mod.rs  priorities.md
src/lexer/: kitsune_lexer.rs  mod.rs  tokens.rs
src/node/: mod.rs  node.rs
src/node/block/: block.rs
src/node/expression/: expression.rs  mod.rs
src/node/function/: call.rs  definition.rs  function.rs  mod.rs  parameter.rs
src/node/statement/: statement.rs
src/node/variable/: declaration.rs  mod.rs  parameter.rs
src/node/visibility/: mod.rs  visibility.rs
src/nodes/: expressions.rs  literals.rs  mod.rs  nodes.rs  trivia.rs
src/nodes/expressions/: expressions.rs  mod.rs
src/parser/: core.rs  elements.rs  mod.rs  parser.rs  sketch
src/parser/block/: block.rs
src/parser/comment/: inline_comment.rs  mod.rs  multiline_comment.rs
src/parser/comments/: inline_comment.rs  multiline_comment.rs
src/parser/expression/: expression_parser.rs  mod.rs
src/parser/expressions/: expression_add_sub_concat_op.rs  expression_comparison.rs  expression_comparison_op.rs  expression_factor.rs  expression_logical_op.rs  expression_mul_div_mod_op.rs  expression_parenthesized.rs  expression_parser.rs  expression_term.rs  expression_unary.rs  expression_unary_op.rs  expression_unit_parser.rs  expression_variable.rs  mod.rs
src/parser/function/: function_call.rs  function_parser.rs  (+2 more)
src/transpiler/: visitor.rs
src/utils/: position.rs
(+83 files in other folders)
