[package]
name = "kitsune-script"
version = "0.1.0"
authors = [
    "Levi Lim <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.88.0"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
lalrpop-util = "0.22.2"
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
